<resources>
    <string name="common_copy">Copy</string>
    <string name="common_copy_success">Copy successfully</string>
    <string name="common_see_other">Look around</string>
    <string name="common_input_pwd_title">Please enter password</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="share_success">Share successfully</string>
    <string name="exit_chain_bet_again">Press again to exit</string>
    <string name="loading">Loading</string>
    <string name="btn_withdraw">Withdraw</string>
    <string name="btn_confirm">@android:string/ok</string>
    <string name="btn_confirm_already">Confirmed</string>
    <string name="modify">Modify</string>
    <string name="tab_bar_lottery">Activity</string>
    <string name="tab_bar_recent">News</string>
    <string name="tab_bar_friend">Friends</string>
    <string name="tab_bar_me">Me</string>
    <string name="tab_bar_create_lottery">Create\nActivity</string>
    <string name="app_name">We Bet</string>
    <string name="app_copyright">©2017.Company PeerSafe All rights reserved</string>
    <string name="common_enter_user_name">Please enter username</string>
    <string name="common_enter_password">Please enter password</string>
    <string name="common_enter_correct_format_user_name">Digital number and alphabet character combination allowed</string>
    <string name="app_agree_now">Experience</string>
    <string name="app_agree"><![CDATA[Click <Experience>, means you agree]]></string>
    <string name="app_agreement">《Webet Terms &#38;&#10; Conditions》</string>
    <string name="register">Register</string>
    <string name="register_confirm_password">Confirmed password</string>
    <string name="register_fail">Register failure</string>
    <string name="register_success">Register successfully</string>
    <string name="register_new_user">Register</string>
    <string name="register_password_not_the_same">Password and confirmed password are different. Please enter again</string>
    <string name="register_account_already_exists">Username enter has been registered. Please enter again</string>
    <string name="register_password_length_not_correct">Password is too short</string>
    <string name="register_enter_confirm_password">Please enter confirmed password</string>
    <string name="register_enter_correct_format_user_name">Please enter 2 to 16 digits or letters</string>
    <string name="register_enter_correct_format_password">Please 8 to 16 characters passwords</string>
    <string name="register_waiting">Registering</string>
    <string name="register_name_length_too_short">Username is too short</string>
    <string name="login">Login</string>
    <string name="login_waiting">Logining</string>
    <string name="login_see_first">Look around</string>
    <string name="login_fail">Incorrect password. Try again</string>
    <string name="export_wifi">WIFI</string>
<string name="emport_file_alert_message">For safety, please backup your wallet,
    In addition, you can also into ‘Personal Center-Export Wallet’later to backup. Please take care of your backup wallet, system could not get back lost wallet.</string>
    <string name="improt">Import</string>
    <string name="not_login">Your are not logged in</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="skip">Skip</string>
    <string name="emport">Export</string>
    <string name="lottery_create">Create Activity</string>
    <string name="lottery_index_newest">Newest</string>
    <string name="lottery_index_fastest">Fastest</string>
    <string name="lottery_index_friend">Friend</string>
    <string name="lottery_index_me">My</string>
    <string name="lottery_compete_treasure">Raid</string>
    <string name="bet">Bet</string>
    <string name="lottery_offical_flag">Offi-\ncial</string>
    <string name="lottery_personal_flag">Pers-\nonal</string>
    <string name="lottery_per_bet">Stake</string>
    <string name="lottery_creater">Creator:</string>
    <string name="date_fromat">MM/dd EE</string>
    <string name="setting_change_account">Switch ID</string>
    <string name="setting_balance">Balance:</string>
    <string name="setting_wallet_address">Wallet Card Number</string>
    <string name="setting_bet_query">Bet History</string>
    <string name="setting_detail_query">Transaction History</string>
    <string name="setting_msg_center">Messages</string>
    <string name="setting_with_draw">Withdraw</string>
    <string name="setting_version_update">Version Update</string>
    <string name="setting_wallet_export">Wallet Export</string>
    <string name="setting_guide_page">Guide Page</string>
    <string name="setting_personal_title">Personal Center</string>
    <string name="setting_transfer">Transfer</string>
    <string name="setting_recharge">Recharge</string>
    <string name="setting_share">Share</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_cur_version">Current VersionV%s</string>
    <string name="setting_deault_user_account">Tourist</string>
    <string name="setting_login_first">Please login!</string>
    <string name="setting_cur_account">Current Account</string>
    <string name="setting_account_change">Switch Account</string>
    <string name="setting_add_new_account">Add New Account</string>
    <string name="setting_delete_account_tip_title">Are you sure to delete?</string>
    <string name="setting_delete_account_tip_message"> To avoid your capital lost, please enter the ‘personal->wallet export’page to backup you wallet before deletion.</string>
    <string name="setting_exit">Log Out</string>
    <string name="setting_bet_query_all">All</string>
    <string name="setting_bet_query_dur">Ongoing</string>
    <string name="setting_bet_query_lucky">Lucky</string>
    <string name="setting_my_bet">My Bet</string>
    <string name="setting_bet_add">Bet More</string>
    <string name="setting_bet_query_bet">Bet: %d&#160;Bet</string>
    <string name="setting_bet_query_status">Status: %s</string>
    <string name="setting_bet_query_luckey_number">Lucky Number: %s</string>
    <string name="setting_bet_query_reward_already">Drawed</string>
    <string name="setting_exit_tip_message">Are you sure to exit current account?</string>
    <string name="lottery_detail_add_concern">Follow</string>
    <string name="lottery_details">Activity Detail</string>
    <string name="lottery_detail_attend_list">Participate List</string>
    <string name="lottery_detail_calculation">Calculation Detail</string>
    <string name="lottery_detail_check">View</string>
    <string name="lottery_detail_start_countdown">Start Countdown</string>
    <string name="lottery_detail_start_date">Start Date</string>
    <string name="lottery_detail_lottery_describtion">Activity Description</string>
    <string name="lottery_detail_lottery_start">Activity is about to begin</string>
    <string name="lottery_detail_rule_type">Rule</string>
    <string name="lottery_detail_prize_winner">Winner: </string>
    <string name="lottery_detail_rule_percent" formatted="false">Winner can get %s bet amount. Lottery can be drawed if bet is full.</string>
    <string name="lottery_detail_deadline">Deadline: %s</string>
    <string name="lottery_detail_end_time">End Time: %s</string>
    <string name="lottery_detail_fail_time">Fail Time: %s</string>
    <string name="lottery_detail_reward_on_going">Lottery is drawing. Please wait</string>
    <string name="lottery_detail_bet_total_count">Bet needed: &#160;&#160;</string>
    <string name="lottery_detail_rest_bet_count">Remaining Bet: &#160;&#160;</string>
    <string name="lottery_detail_lottery_fail">Fail activity: %s</string>
    <string name="lottery_detail_lottery_can_refund">Fail activity: %s&#160;&#160;(Refunding)</string>
    <string name="lottery_detail_lottery_refund_already">Fail activity: %s&#160;&#160;(Refunded)</string>
    <string name="lottery_detail_bet_count">Total bet: %dBet</string>
    <string name="lottery_detail_my_add_bet">My bet: %d&#160;Bet</string>
    <string name="lottery_detail_not_add_lottery">You are not involved in.</string>
    <string name="lottery_detail_revise">Modify</string>
    <string name="lottery_detail_add_concern_already">Followed</string>
    <string name="lottery_detail_luckey_number">Lucky number: </string>
    <string name="lottery_detail_bet_total_cost">Total bet amount: %d ZX Coin</string>
    <string name="lottery_detail_award">Winner: %s</string>
    <string name="lottery_detail_per_bet"> %d Bet</string>
    <string name="lottery_bet_count">Bet Count</string>
    <string name="lottery_bet_immediately">Bet Now</string>
    <string name="lottery_bet_num_five">5 Bets</string>
    <string name="lottery_bet_num_twenty">20 Bets</string>
    <string name="lottery_bet_num_fifty">50 Bets</string>
    <string name="lottery_bet_num_all">bet rest</string>
    <string name="lottery_bet_total">Pay: %d ZX Coin</string>
    <string name="lottery_bet_balance">Balance: %s ZX Coin</string>
    <string name="lottery_bet_per_cost">%d ZX Coin/Bet</string>
    <string name="lottery_bet_not_start">Activity has not begun!</string>
    <string name="lottery_bet_num_empty">Please enter Bet Count!</string>
    <string name="lottery_bet_num_exceed">enter bets should not excced remaining count!</string>
    <string name="lottery_bet_balance_not_enough">No sufficient Balance. Please top up!</string>
    <string name="lottery_bet_waiting">Betting now. Please wait...</string>
    <string name="lottery_has_start_notify">Activity began. No modify permitted.</string>
    <string name="recent_announcement">News</string>
    <string name="recent_reward">Draws</string>
    <string name="recent_history">History</string>
    <string name="recent_fail">Failure</string>
    <string name="recent_time_to_reward">The time is comming. Click to draw the lottery.</string>
    <string name="recent_reward_lottery_waiting">Thanks. please wait!</string>
    <string name="recent_reward_waiting_text">The lottery is drawing. Navigate to ’Lottery History’ for more details</string>
    <string name="recent_reward_ing">Drawing</string>
    <string name="recent_lottery_creater_holder">Holder: %s</string>
    <string name="recent_lottery_creater_holders">Holder:</string>
    <string name="create_lottery_rule">Rule</string>
    <string name="create_lottery_setting">Activity Setting</string>
    <string name="create_lottery_title">Activity Title</string>
    <string name="create_lottery_describe">Activity description(Optional)</string>
    <string name="create_lottery_label">Activity Tag</string>
    <string name="create_lottery_select_label">Select Tag</string>
    <string name="create_lottery_create">Create</string>
    <string name="create_lottery_describe_content">Description within 30 words</string>
    <string name="create_lottery_title_content">Title within 20 words</string>
    <string name="create_lottery_bet_word">Bet</string>
    <string name="create_lottery_peersafe_coin">%d ZX Coin</string>
    <string name="create_lottery_start_time_text">Start Time</string>
    <string name="create_lottery_duration_time_text">Duration</string>
    <string name="create_lottery_total_bet_text">Total bets</string>
    <string name="no_lottery">No activity</string>
    <string name="withdraw_bank_belong">Bank of Deposit </string>
    <string name="withdraw_card_number">Card No.</string>
    <string name="withdraw_bank_card_holder">Cardholder</string>
    <string name="withdraw_enter_card_number">Enter Bank Card Number</string>
    <string name="withdraw_enter_bank_name">Enter Bank Name</string>
    <string name="withdraw_enter_card_holder">Enter Cardholder Name</string>
    <string name="withdraw_appeal_reason">Complaint Reason</string>
    <string name="withdraw_one_huandrd">within 100 words </string>
</resources>