<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_bank_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_alert"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:background="@color/reward_layout_bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/x40"
        android:textColor="@color/add_concern_btn_color"
        android:textSize="@dimen/y28"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:background="@color/white">

        <TextView
            android:layout_width="@dimen/x210"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/withdraw_bank_belong"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/y28"/>

        <EditText
            android:id="@+id/et_bank_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x210"
            android:textSize="@dimen/y28"
            android:maxLength="100"
            android:maxLines="1"
            android:inputType="text"
            android:ellipsize="end"
            android:layout_centerVertical="true"
            android:background="@null"
            android:hint="@string/withdraw_enter_bank_name"/>

    </RelativeLayout>

    <include layout="@layout/withdraw_diviver_line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:background="@color/white">

        <TextView
            android:layout_width="@dimen/x210"
            android:layout_height="match_parent"
            android:text="@string/withdraw_card_number"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/y28"/>

        <com.peersafe.chainbet.widget.CardEditText
            android:id="@+id/et_card_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x210"
            android:layout_centerVertical="true"
            android:background="@null"
            android:maxLength="100"
            android:inputType="number"
            android:textSize="@dimen/y28"
            android:hint="@string/withdraw_enter_card_number"/>

    </RelativeLayout>

    <include layout="@layout/withdraw_diviver_line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:background="@color/white">

        <TextView
            android:layout_width="@dimen/x210"
            android:layout_height="match_parent"
            android:text="@string/withdraw_bank_card_holder"
            android:gravity="center"
            android:ellipsize="end"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/y28"/>

        <EditText
            android:id="@+id/et_card_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:maxLength="100"
            android:maxLines="1"
            android:ellipsize="end"
            android:inputType="text"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x210"
            android:textSize="@dimen/y28"
            android:hint="@string/withdraw_enter_card_holder"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_confrim"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y88"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/x40"
        android:layout_marginTop="@dimen/y30"
        android:background="@drawable/selector_register_btn"
        android:text="@string/btn_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/y38"/>
</LinearLayout>
