<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/activity_appeal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginTop="@dimen/y30"
        android:text="@string/withdraw_appeal_reason"
        android:textColor="@color/lottery_item_text_color"
        android:textSize="@dimen/y32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_appeal_reason"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/x40"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y280"
        android:layout_marginTop="@dimen/y28"
        android:background="@drawable/shape_white"
        android:gravity="start|top"
        android:hint="@string/withdraw_one_huandrd"
        android:inputType="textMultiLine"
        android:maxLength="100"
        android:padding="@dimen/y10"
        android:textColorHint="@color/transfer_account"
        android:textSize="@dimen/y25"/>

    <Button
        android:id="@+id/btn_appeal_confirm"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y88"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/x40"
        android:layout_marginTop="@dimen/y30"
        android:background="@drawable/selector_register_btn"
        android:text="@string/btn_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/y38"/>

</LinearLayout>
